<resources>
    <string name="app_name">Scientific Study</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="takeAttendance">Take attendance</string>
    <string name="classWiseAttendance">Class Wise attendance</string>
    <string name="monthWiseattendance">Month Wise Report</string>
    <string name="studentWiseAttendance">Student Wise Report</string>
    <string name="dayWiseAttendance">Day Wise Report</string>
    <string name="extraDayReport">Extra Day Report</string>
    <string name="outDoorReport">Out Door Report</string>
    <string name="staffWiseAttendance">Staff Wise Report</string>
    <string name="datewiseAttendance">Date wise Report</string>
    <string name="attendanceModule">Attendance</string>
    <string name="title_activity_chat">ChatActivity</string>
    <string name="take_photo">Take Photo</string>
    <string name="choose_from_gallery">Choose from gallery</string>
    <string name="select_option">Select Option...</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="alert">Alert</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="fulldayToggleBtn">Fullday</string>
    <string name="halfdayToggleBtn">Halfday</string>
    <string name="facebook_app_id">257115411651808</string>
    <string name="driverDashboardHomeTab">Home</string>
    <string name="driverDashboardNotifyTab">Notify</string>
    <string name="driverDashboardLogoutTab">Logout</string>
    <string name="driverDashboardEmergancyContact">Emergency</string>
    <string name="driverdashboardStudent">Student</string>
    <string name="adminDashboardHomeTab">Home</string>
    <string name="adminDashboardTodayTab">Today</string>
    <string name="adminDashboardTeachTab">Teach</string>
    <string name="adminDashboardToolsTab">Tools</string>
    <string name="parentDashboardLearnTab">Learn</string>
    <string name="parentDashboardCommunityTab">Community</string>
    <string name="ImeActionDone">Done</string>
    <string name="ImeActionNext">Next</string>
    <string name="notify_parents_notes_hint">Notes</string>
    <string name="somethingWrongMsg">Something went wrong. Please try again.</string>
    <string name="somethingWrongNoDataMsg">Something went wrong. No data found. Please try again.</string>
    <string name="noRecordMsg">No record found</string>
    <string name="noLatLong">We are unable to track location due to some technical problem. Please try after some time. Sorry for the inconvenience.</string>
    <string name="journeyCompleted_pick">The journey has completed. Your child has reached school</string>
    <string name="journeyCompleted_drop">The journey has completed. All students have reached on their destination.</string>
    <string name="picked_journeyMode">picked</string>
    <string name="dropped_journeyMode">dropped</string>
    <string name="noJourney">At this moment, no journey is going on.</string>
    <string name="startedButNoLocation">Journey has started but we are unable to track location due to some problem. Sorry for the inconvenience.</string>
    <string name="greetingsLbl">Hello</string>
    <string name="messages_puncture_rad">Breakdown (Puncture)</string>
    <string name="messages_PunctureSubtitle">Delay due to tyre puncture</string>
    <string name="messages_traffic_rad">Traffic</string>
    <string name="messages_trafficSubtitle">Delay due to traffic</string>
    <string name="messages_accident_rad">Accident</string>
    <string name="messages_accidentSubtitle">Delay due to accident</string>
    <string name="messages_other_rad">Others</string>
    <string name="messages_otherSubtitle">Delay due to some reason</string>
    <string name="successMsg">Successfully notified</string>
    <string name="failedMsg">Failed to notify</string>
    <string name="driver_home_frag_userName">%S</string>
    <string name="startJourneyBtn">Start Journey</string>
    <string name="dialogTitle">Complete Journey</string>
    <string name="dialogPositiveButtonOk">OK</string>
    <string name="dialogMsg">Please complete your journey to logout.</string>
    <string name="route_selectMode">Select mode</string>
    <string name="radRoute_radPickup">Pickup</string>
    <string name="radRoute_radDrop">Drop</string>
    <string name="selectRoute_lbl">Select your route</string>
    <string name="route_setToolbar">Start Journey</string>
    <string name="vehicle_lbl">Select your vehicle</string>
    <string name="vehicle_dialogTitle">Confirm Journey</string>
    <string name="vehicle_positiveBtn">CONFIRM</string>
    <string name="dialogNegativeButtonCancel">CANCEL</string>
    <string name="route_assigned">Assigned Route</string>
    <string name="vehicle_assigned">Assigned Vehicle</string>
    <string name="successMsg_Journey">Journey has been successfully completed</string>
    <string name="confirmJourneyMsg">You are going to complete your journey.</string>
    <string name="driver_frag_jourBtn_dTitle">Location permission</string>
    <string name="driver_frag_jBtn_dMsg">Please provide location permission to continue.</string>
    <string name="driver_frag_dialog_Title">LocationTrack Permission</string>
    <string name="driver_frag_dialog_Msg">Please provide location permission to start journey.</string>
    <string name="driver_frag_startTime">Started @</string>
    <string name="driver_frag_routeName">Via </string>
    <string name="driver_frag_vehicleNo">By </string>
    <string name="drivre_notificationBtn">Send notification</string>
    <string name="driver_frag_notify_lbl">Choose message</string>
    <string name="check_app_update">Check For Update</string>
    <string name="nav_help">Get help</string>
    <string name="nav_earn">Share and earn</string>
    <string name="nav_share">Share the app</string>
    <string name="nav_rating">Rate us</string>
    <string name="nav_terms">Terms of use</string>
    <string name="nav_about_us">About Scientific Study</string>
    <string name="nav_logout">Logout</string>
    <string name="trackLoctionBtn">Track Location</string>
    <string name="changeLang_loadingMsg">Please wait while we are translating language. It may take some time</string>
    <string-array name="languages">
        <item>Language</item>
        <item>English</item>
        <item>हिंदी</item>
        <item>தமிழ்</item>
        <item>ਪੰਜਾਬੀ</item>
        <item>मराठी</item>
        <item>ગુજરાતી</item>
        <item>বাঙালি</item>
        <item>తెలుగు</item>
        <item>ಕನ್ನಡ</item>
        <item>മലയാളം</item>
    </string-array>
    <string name="notify_subtitle">Notification will be sent to parents of this route and admins.</string>
    <string name="startJourneyConfirmLbl">You are going to start a new journey.</string>
    <string name="notificationMsgErr">Please select message of the notification</string>
    <string name="currentJourneyLbl">Current Journey</string>
    <string name="plogin_examlist_reportcardBtn">Download report card</string>
    <string name="transport_driverLbl">Manage drivers</string>
    <string name="transport_routelistLbl">Track location of vehicles</string>
    <string name="trans_routelist_drivercall">Call</string>
    <string name="trans_routelist_driverprofile">Profile</string>
    <string name="trans_routelist_drivercNotifi">Share credential by sms</string>
    <string name="trans_driverlist_journeyLbl">Last journey detail</string>
    <string name="trans_driverlist_subHeader">Total</string>
    <string name="trans_driverlist_dialog_dName">Are you sure to send user ID / password to</string>
    <string name="trans_driverlist_dialogTitle">Confirmation</string>
    <string name="trans_driverlist_Sms">These are your login credentials of Scientificstudy app.</string>
    <string name="usernameLbl">Username: </string>
    <string name="passwordLbl">Password: </string>
    <string name="successs_Sms">Successfully sent</string>
    <string name="failed_Sms">Failed to send sms. Please try again.</string>
    <string name="dialogPositiveButtonDelete">DELETE</string>
    <string name="selectedRouteLbl">Selected route is </string>
    <string name="selectedVehicleLbl">Selected vehicle\'s model is</string>
    <string name="selectedVehicleNo">is it\'s number and</string>
    <string name="vehicleLbl2">it is a</string>
    <string name="emergencyTitle">Please call on these numbers in case of any emergency</string>
    <string name="drawer_setting_notificationTitle">Transport notification</string>
    <string name="drawer_setting_notificationTxt">Notify on start journey</string>
    <string name="drawer_setting_notificationSms">Send notification automatically when journey starts</string>
    <string name="drawer_setting_notifycompleteTitle">Notify on complete journey</string>
    <string name="drawer_setting_notifycompleteText">Send notification automatically after completing the journey</string>
    <string name="trans_routelist_calldialog_lbl">Click on the driver name to whom you want to make call </string>
    <string name="routelist_calldialog_drvernameLbl">He is the assigned driver.</string>
    <string name="routelist_calldialog_selectdriverNameLbl">He is driving the vehicle right now.</string>
    <string name="routlist_calldialog_Tilte">Contacts</string>
    <string name="appsetting_successMsg">Saved successfully</string>
    <string name="appsetting_failedMsg">Failed to save</string>
    <string name="driverdashbordEmergencydialogTitle">Click on the contact number to whom you want to make call.</string>
    <string name="driverdashbordEmergencydialogTxt">Contacts</string>
    <string name="trans_driverlist_journeyTxt">Current journey detail</string>
    <string name="login_enter_schoolKeyRow">Enter your school key</string>
    <string name="login_get_schoolkey_subtitle">Please select your country, state, city and school to get your school key</string>
    <string name="login_unableToLogin">Trouble signing in?</string>
    <string name="forgetPassword">Forgot password?</string>
    <string name="login_passwordRow">Password</string>
    <string name="login_emailRow">User Name</string>
    <string name="login_haveAccount1">Already have an account with us?</string>
    <string name="login_forgetpassword_mobileRow">Enter your registered phone no</string>
    <string name="login_forgetpassword_emailRow">Enter your registered email</string>
    <string name="login_forgetpassword_orLbl">OR</string>
    <string name="noUpdates">No updates</string>
    <string name="noUpdatesMsg2">We\'ll let you know when we have something for you here.</string>
    <string name="registration_module">Registration</string>
    <string name="class_module">Students</string>
    <string name="staff_module">Staff</string>
    <string name="attendance_module">Attendance</string>
    <string name="cw_module">Classwork</string>
    <string name="hw_module">Homework</string>
    <string name="exam_module">Exam</string>
    <string name="fee_module">Fee</string>
    <string name="my_teachers_module">My Teachers</string>
    <string name="transport_module">Transport</string>
    <string name="inventory_module">Inventory</string>
    <string name="my_leave_module">My Leave</string>
    <string name="accounts_module">Accounts</string>
    <string name="my_timetable_module">"My Timetable</string>
    <string name="staff_timetable_module">Staff Timetable</string>
    <string name="contact_number">9137706300,+91-120-4210538</string>
    <string name="email_Id">scientificstudyhelpdesk@gmail.com</string>
    <string name="default_cont_desc">Image</string>
    <string name="private_inbox">Private</string>
    <string name="group">Group</string>
    <string name="staffBtn">Staff</string>
</resources>