<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>

        <import type="android.view.View" />

        <variable
            name="viewModel"
            type="com.jeannypr.scientificstudy.Dashboard.model.TodayTabItemDetail" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/chatSection"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="12dp"
        app:layout_constraintTop_toBottomOf="@+id/messengerTabs">

        <TextView
            android:id="@+id/tvChatTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@{viewModel.title}"
            android:textColor="@color/green10"
            android:textSize="@dimen/lg_size_text"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <com.google.android.material.button.MaterialButton
            android:id="@+id/staffChatBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:minHeight="50dp"
            android:text="@string/staffBtn"
            android:textAllCaps="false"
            android:textSize="@dimen/md_size_text"
            app:backgroundTint="@color/yellow5"
            app:cornerRadius="6dp"
            app:layout_constraintEnd_toStartOf="@+id/classChatBtn"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvChatTitle" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/classChatBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="8dp"
            android:minHeight="50dp"
            android:text="@string/group"
            android:textAllCaps="false"
            android:textSize="@dimen/md_size_text"
            app:backgroundTint="@color/pink3"
            app:cornerRadius="6dp"
            app:layout_constraintEnd_toStartOf="@+id/inboxChatBtn"
            app:layout_constraintStart_toEndOf="@+id/staffChatBtn"
            app:layout_constraintTop_toBottomOf="@+id/tvChatTitle" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/inboxChatBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="8dp"
            android:minHeight="50dp"
            android:text="@string/private_inbox"
            android:textAllCaps="false"
            android:textSize="@dimen/md_size_text"
            app:backgroundTint="@color/blue8"
            app:cornerRadius="6dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/classChatBtn"
            app:layout_constraintTop_toBottomOf="@+id/tvChatTitle" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>